# Music-Visualizer

./: CMakeLists.txt  README.md  main.cpp
include/GLFW/: glfw3.h
shaders/graph/: fragment.glsl  vertex.glsl
shaders/keyboard/: vertex.glsl
shaders/notes/: fragment.glsl  vertex.glsl
src/: shader.cpp  shader.hpp
src/input/: dp.cpp  dp.hpp
src/model/: keyboard.cpp  keyboard.hpp
src/view/: graph.cpp  graph.hpp  keys.cpp  keys.hpp  notes.cpp  notes.hpp  view.cpp  view.hpp
